syntax = "proto3";

option go_package = "/geo_suggest_pb";

package geo_suggest_pb;

enum Bound {
    country	= 0;
    region = 1;
    area = 2;
    city = 3;
    settlement = 4;
    street = 5;
    house = 6;
    flat = 7;
}

service AddressSuggestService {
  rpc Suggest (QueryRequest) returns (SuggestResponse) {}
}

message QueryRequest {
  string query = 1;
  Bound from_bound = 2;
  Bound to_bound = 3;
}

message SuggestResponse {
  message Result {
    string value = 1;
    map<string, string> data = 2;
  }
  repeated Result suggestions = 1;
}